# backend/src/modules/schedule/schedule.controller.ts
@@ -1,4 +1,12 @@
-import { Controller } from '@nestjs/common';
+import { Controller, Get } from '@nestjs/common';
+import { ScheduleService } from './schedule.service';
 
 @Controller('schedule')
-export class ScheduleController {}
+export class ScheduleController {
+  constructor(private readonly scheduleService: ScheduleService) {}
+
+  @Get('health')
+  getHealth() {
+    return this.scheduleService.getHealth();
+  }
+}
